--- a/ProjectHtml/Css/style.css
+++ b/ProjectHtml/Css/style.css
@@ -1,130 +1,113 @@
-body
-{
+body {
 	font-family: 'Philosopher', sans-serif;
+	/*background: url('../Images/back3.jpg') no-repeat fixed;*/
+	width: 100%;
+	height: 100%;
+
 }
-header
-{
+
+header {
 	background: black;
 	height: 110px;
 	width: 100%;
 	position: fixed;
 }
 
-header img
-{
+header img {
 	width: 180px;
 	height: 110px;
 	float: left;
 }
 
-nav
-{
-	float:right;
+nav {
+	float: right;
 	width: 1400px;
 	padding-top: 20px;
 }
 
-nav h2 
-{
-
+nav h2 {
 	padding-top: 20px;
 	color: #FFD700;
 	padding-left: 150px;
 	margin-right: 400px;
-	font-size: 38px;	
+	font-size: 38px;
 	float: left;
 }
 
-nav ul
-{
+nav ul {
 	padding-top: 30px;
 }
-nav ul li
-{
 
+nav ul li {
 	text-decoration: none;
 	display: inline;
 	/*float: right;*/
 }
 
-nav ul li a
-{
+nav ul li a {
 	text-decoration: none;
 	color: white;
 	font-size: 20px;
 }
 
-
-
-
-
-#img-hero
-{
+#img-hero {
 	margin-top: 150px;
-	background: url('/Images/image.jpg')no-repeat ;
+	background: url('../Images/image.jpg')no-repeat;
 	height: 600px;
 	width: 1200px;
 }
 
-#img-hero h1
-{
+#img-hero h1 {
 	font-size: 29px;
 	color: white;
 	text-align: center;
 }
 
-.world h1
-{
+.world h1 {
 	text-align: center;
 	font-size: 48px;
 	text-transform: uppercase;
 	font-family: ;
 }
 
-.first img
-{
+.first img {
 	width: 280px;
 	height: 220px;
-
 }
-.first p
-{
+
+.first p {
 	padding-top: 10px;
 	font-size: 18px;
-
 	text-align: center;
+	/*   color: white;*/
 }
 
-.second img
-{
-		width: 280px;
+.second img {
+	width: 280px;
 	height: 220px;
-
 }
 
-.second p
-{
+.second p {
 	padding-top: 10px;
 	font-size: 18px;
 	text-align: center;
+	/*color: white;*/
 }
-.third img
-{
-		width: 280px;
+
+.third img {
+	width: 280px;
 	height: 220px;
-
 }
 
-.third p
-{
+.third p {
 	padding-top: 10px;
 	font-size: 18px;
 	text-align: center;
+	/*color: white;*/
+
 }
 
-
-.model h1
-{
+.model h1 {
 	text-align: center;
 	font-size: 48px;
 	text-transform: uppercase;
@@ -132,109 +115,97 @@ nav ul li a
 	color: blue;
 }
 
-.venon img
-{
+.venon img {
 	width: 450px;
 	height: 314px;
 }
 
-.venon a
-{
+.venon a {
 	padding-top: 4px;
 	padding-bottom: -5px;
 	margin-left: 170px;
 	text-decoration: none;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 24px;
 }
 
-.venon a:hover
-{
+.venon a:hover {
 	font-size: 28px;
 	color: blue;
 	cursor: pointer;
 }
 
-.rt-text
-{
+.rt-text {
 	font-size: 16px;
 	margin-bottom: 20px;
+	/*color: white;*/
+
 }
 
-.hurara img
-{
+.hurara img {
 	width: 450px;
 	height: 380px;
 }
 
-.hurara a
-{
+.hurara a {
 	padding-top: 4px;
 	padding-bottom: -5px;
 	margin-left: 170px;
 	font-weight: bold;
 	font-size: 24px;
 	text-decoration: none;
-
 }
 
-.hurara a:hover
-{
-		font-size: 28px;
+.hurara a:hover {
+	font-size: 28px;
 	color: blue;
 	cursor: pointer;
-
 }
-.huraratxt
-{
+
+.huraratxt {
 	font-size: 16px;
 	margin-bottom: 25px;
+	/*color: white;*/
+
 }
 
-.avent img
-{
+.avent img {
 	clear: both;
 	overflow: hidden;
 	width: 450px;
 	height: 380px;
 }
 
-.avent a
-{
+.avent a {
 	padding-top: 3px;
 	padding-bottom: -5px;
 	margin-left: 170px;
 	font-weight: bold;
 	font-size: 24px;
 	text-decoration: none;
-
 }
 
-.avent a:hover
-{
+.avent a:hover {
 	font-size: 28px;
 	color: blue;
 	cursor: pointer;
-
 }
-.aventador
-{
+
+.aventador {
 	font-size: 16px;
 	margin-bottom: 20px;
+	/*color: white;*/
+
 }
 
-
-
-footer
-{
+footer {
 	float: left;
 	background: black;
 	height: 100px;
 	width: 100%;
 }
 
-footer h1
-{
+footer h1 {
 	margin-top: 10px;
 	/*padding-top: 30px;*/
 	color: #FFD700;
@@ -243,58 +214,42 @@ footer h1
 	/*font-size: 38px;	*/
 }
 
-footer ul
-{
+footer ul {
 	/*width: 200px;*/
-margin-top: 10px;
+	margin-top: 10px;
 	float: right;
 }
 
-
-
-footer li
-{
-
+footer li {
 	display: inline;
 	text-decoration: none;
 	color: white;
-
 }
 
-footer li:hover
-{
+footer li:hover {
 	cursor: pointer;
 }
 
-
-
-
-#huracan-hero
-{
+#huracan-hero {
 	margin-top: 150px;
-	background: url('/Images/huracan.gif')no-repeat ;
+	background: url('../Images/huracan.gif')no-repeat;
 	height: 600px;
 	width: 1200px;
 }
 
-#huracan-hero h1
-{
+#huracan-hero h1 {
 	font-size: 29px;
 	color: #FFD700;
-
 }
 
-#venon-hero
-{
+#venon-hero {
 	margin-top: 150px;
-	background: url('/Images/veneno1.jpg')no-repeat ;
+	background: url('../Images/veneno1.jpg')no-repeat;
 	height: 600px;
 	width: 1200px;
 }
 
-#venon-hero h1
-{
+#venon-hero h1 {
 	font-size: 29px;
 	color: #FFD700;
-
 }
